# 6DRepNet_ros

./: 6drepnet_fast_node.py  6drepnet_node.py  6drepnet_sub_rot.py  CMakeLists.txt  README.md  model.py  package.xml  requirements.txt  utils.py
vision/ssd/: predictor.py
